[project]
name = "marimo-md-export"
version = "0.1.0"
description = "A minimal solution for exporting marimo notebooks to markdown *with* rendered HTML outputs, designed for mkdocs/zensical sites."
readme = "README.md"
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "marimo>=0.23.3",
    "typer>=0.25.0",
]

[project.scripts]
marimo-md-export = "marimo_md_export:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "rust-just>=1.50.0",
    {include-group = "docs"},
]
docs = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "zensical>=0.0.37",
]
